--- a/public/css/modals/flash-message.css
+++ b/public/css/modals/flash-message.css
@@ -82,3 +82,11 @@
 .flash-message .close-flash-btn .close-flash:after {
   transform: rotate(-45deg);
 }
+
+@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+  .flash-message {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
