--- a/public/css/modals/recommended-modal.css
+++ b/public/css/modals/recommended-modal.css
@@ -16,58 +16,16 @@
   overflow-y: scroll;
 }
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal {
-    top: 10px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    max-height: 700px;
-    height: 100%;
-    overflow-y: scroll;
-  }
-}
-
 .modal-bg .recommended-modal .recommended-section {
   display: flex;
-}
-
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal .recommended-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.modal-bg .recommended-modal .recommended-section .recommened-product-image {
-  /* border: 1px solid blue; */
 }
 
 .modal-bg .recommended-modal .recommended-section .recommened-product-image img {
   width: 250px;
 }
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal .recommended-section .recommened-product-image img {
-    width: 150px;
-  }
-}
-
 .modal-bg .recommended-modal .recommended-section .product-info {
-  /* border: 1px solid green; */
   margin-left: 90px;
-}
-
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal .recommended-section .product-info {
-    /* border: 1px solid green; */
-    margin-left: initial;
-    margin-top: 10px;
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-  }
 }
 
 .modal-bg .recommended-modal .recommended-section .product-info .product-title {
@@ -92,24 +50,6 @@
   font-size: 20px;
 }
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal .recommended-section .product-info .product-price {
-    box-sizing: border-box;
-    position: relative;
-    margin-top: 20px;
-    width: 120px;
-    height: 35px;
-    border-radius: 30px;
-    padding-left: initial;
-    text-align: center;
-    line-height: 35px;
-    background: black;
-    color: rgb(243, 243, 243);
-    font-weight: 600;
-    font-size: 20px;
-  }
-}
-
 .modal-bg .recommended-modal .recommended-section .product-info hr {
   margin-top: 30px;
   border: 0;
@@ -118,15 +58,6 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .modal-bg .recommended-modal .recommended-section .product-info hr {
-    margin-top: 10px;
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
-}
 
 .modal-bg .recommended-modal .recommended-section .product-info .product-description {
   white-space: pre-line; 
@@ -281,4 +212,63 @@ input::-webkit-inner-spin-button {
 
 .modal-bg .recommended-modal .close-modal-btn .close:after {
   transform: rotate(-45deg);
+}
+
+@media (min-width : 321px) and (max-width : 480px) {
+  .modal-bg .recommended-modal {
+    top: 10px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    max-height: 700px;
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  .modal-bg .recommended-modal .recommended-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modal-bg .recommended-modal .recommended-section .recommened-product-image img {
+    width: 150px;
+  }
+
+  .modal-bg .recommended-modal .recommended-section .product-info {
+    margin-left: initial;
+    margin-top: 10px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modal-bg .recommended-modal .recommended-section .product-info .product-price {
+    box-sizing: border-box;
+    position: relative;
+    margin-top: 20px;
+    width: 120px;
+    height: 35px;
+    border-radius: 30px;
+    padding-left: initial;
+    text-align: center;
+    line-height: 35px;
+    background: black;
+    color: rgb(243, 243, 243);
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .modal-bg .recommended-modal .recommended-section .product-info hr {
+    margin-top: 10px;
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+}
+
+
+@media (min-width : 768px) and (max-width : 1024px) {
+
 }
