--- a/public/css/modals/status-check-modal.css
+++ b/public/css/modals/status-check-modal.css
@@ -108,3 +108,12 @@
 .modal-bg .status-check-modal .close-modal-btn .close:after {
   transform: rotate(-45deg);
 }
+
+@media (min-width : 768px) and (max-width : 1024px) {
+  .modal-bg .status-check-modal {
+    top: 65px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
