--- a/public/css/pages/password.css
+++ b/public/css/pages/password.css
@@ -6,17 +6,6 @@
   padding: 50px 100px;
 }
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .password-section {
-    margin-top: -25px;
-    box-sizing: border-box;
-    min-height: 500px;
-    height: 100%;
-    background: rgb(243, 243, 243);
-    padding: 25px 5%;
-  }
-}
-
 .registration-modal {
   box-sizing: border-box;
   background-color: rgb(243, 243, 243);
@@ -25,18 +14,6 @@
   padding: 0 20px;
   padding-top: 40px;
   z-index: 100;
-}
-
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
-  .registration-modal {
-    box-sizing: border-box;
-    background-color: rgb(243, 243, 243);
-    max-width: 500px;
-    width: 100%;
-    padding: 0 20px;
-    padding-top: 0px;
-    z-index: 100;
-  }
 }
 
 .registration-modal .heading {
@@ -99,4 +76,32 @@
   letter-spacing: 1.5px;
   font-size: 12px;
   text-transform: uppercase;
+}
+
+
+@media (min-width : 321px) and (max-width : 480px) {
+  .password-section {
+    margin-top: -25px;
+    box-sizing: border-box;
+    min-height: 500px;
+    height: 100%;
+    background: rgb(243, 243, 243);
+    padding: 25px 5%;
+  }
+
+  .registration-modal {
+    box-sizing: border-box;
+    background-color: rgb(243, 243, 243);
+    max-width: 500px;
+    width: 100%;
+    padding: 0 20px;
+    padding-top: 0px;
+    z-index: 100;
+  }
+}
+
+@media (min-width : 768px) and (max-width : 1024px) {
+  .password-section {
+    margin-top: -25px;
+  }
 }
