--- a/public/css/pages/profile.css
+++ b/public/css/pages/profile.css
@@ -230,3 +230,9 @@
   font-size: 17px;
   font-weight: 500;
 }
+
+@media (min-width : 768px) and (max-width : 1024px) {
+  .profile {
+    margin-top: -25px;
+  }
+}
