--- a/public/css/modals/forgot-password-modal.css
+++ b/public/css/modals/forgot-password-modal.css
@@ -111,6 +111,13 @@
   }
 }
 
+@media (min-width : 481px) and (max-width : 767px) {
+  .modal-bg .forgot-modal {
+    top: 65px;
+    right: 85px;
+  }
+}
+
 
 @media (min-width : 768px) and (max-width : 1024px) {
   .modal-bg .forgot-modal {
