--- a/public/css/modals/cart-modal.css
+++ b/public/css/modals/cart-modal.css
@@ -322,5 +322,8 @@ input[type='checkbox']:checked ~ .cart-modal
   } 
 }
 
+@media (min-width : 481px) and (max-width : 767px) {
+}
+
 @media (min-width : 768px) and (max-width : 1024px) {
 }
