--- a/public/css/modals/categories-modal.css
+++ b/public/css/modals/categories-modal.css
@@ -53,6 +53,55 @@
   }
 }
 
+@media (min-width : 481px) and (max-width : 767px) {
+  input[type = 'checkbox'] {
+    display: none;
+  }
+
+  .categories-modal {
+    display: block;
+    box-sizing: border-box;
+    position: fixed;
+    height: 100vh;
+    max-width: 380px;
+    width: 100%;
+    top: 0;
+    right: -380px;
+    background: rgb(255, 255, 255);
+    z-index: 120;
+    transition: all .5s;
+    overflow-y: scroll;
+  }
+
+
+  input[type='checkbox']:checked~.categories-modal {
+    transform: translateX(350px);
+  }
+
+  .categories-modal .categories-close {
+    height: 40px;
+    line-height: 40px;
+    text-align: right;
+    padding-right: 10px;
+    color: rgb(150, 150, 150);
+  }
+
+  .categories-modal .nav .navbar {}
+
+  .categories-modal .nav .navbar .menu-list li {
+    height: 50px;
+    line-height: 50px;
+    border-bottom: 1px solid rgb(243, 243, 243);
+    color: #000;
+    padding-left: 10px;
+  }
+
+  .categories-modal .nav .navbar .menu-list a {
+    text-decoration: none;
+    color: #000;
+  }
+}
+
 @media (min-width : 768px) and (max-width : 1024px) {
   input[type = 'checkbox'] {
     display: none;
