--- a/public/css/modals/registration-modal.css
+++ b/public/css/modals/registration-modal.css
@@ -175,6 +175,15 @@
   }
 }
 
+@media (min-width : 481px) and (max-width : 767px) {
+  .modal-bg .registration-modal {
+    top: 65px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
+
 @media (min-width : 768px) and (max-width : 1024px) {
   .modal-bg .registration-modal {
     top: 65px;
