--- a/public/css/pages/password.css
+++ b/public/css/pages/password.css
@@ -100,6 +100,12 @@
   }
 }
 
+@media (min-width : 481px) and (max-width : 767px) {
+  .password-section {
+    margin-top: -25px;
+  }
+}
+
 @media (min-width : 768px) and (max-width : 1024px) {
   .password-section {
     margin-top: -25px;
