--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,7 +99,7 @@ body {
 .lower-header .nav .navbar .login_cart_burger .burger {
   display: none;
 }
- 
+
 
 .lower-header .nav .navbar ul {
   display: flex;
@@ -257,6 +257,7 @@ body {
 .footer-content .nav .login_cart_burger {
   display: none;
 }
+
 /* !!!!!!!!!! */
 
 .footer-content .footer-info {
@@ -572,7 +573,7 @@ body {
   color: #000;
   margin-left: 5px;
   margin-right: 5px;
-}   
+}
 
 .product-section .product-slider .product-slider-bottom .product-switchers .product-switcher.active {
   color: #fff;
@@ -614,7 +615,7 @@ body {
 }
 
 .product-section .product-info .product-description {
-  white-space: pre-line; 
+  white-space: pre-line;
   margin-top: -25px;
   font-weight: 400;
   font-size: 20px;
@@ -633,13 +634,13 @@ body {
   letter-spacing: 2px;
 }
 
-.product-section .product-info .product-size ul  {
+.product-section .product-info .product-size ul {
   margin-top: 20px;
   display: flex;
 }
 
 .product-section .product-info .product-size .product-size-btn {
-  margin-right: 10px;
+  margin: 5px;
   width: 40px;
   height: 40px;
   border: none;
@@ -1074,7 +1075,7 @@ input::-webkit-inner-spin-button {
     margin: 0 auto;
   }
 
- 
+
   .product-section .product-slider .product-slider-center .product-slider-arrow-left,
   .product-section .product-slider .product-slider-center .product-slider-arrow-right {
     border: none;
@@ -1151,7 +1152,7 @@ input::-webkit-inner-spin-button {
   }
 
   .product-section .product-info .product-size .product-size-btn {
-    margin-right: 10px;
+    margin: 5px;
     width: 35px;
     height: 35px;
     border: none;
@@ -1218,7 +1219,353 @@ input::-webkit-inner-spin-button {
   }
 }
 
-@media (min-width : 481px) and (max-width : 767px) {}
+@media (min-width : 481px) and (max-width : 767px) {
+  /* header */
+
+  .upper-header {
+    box-sizing: border-box;
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    width: 100%;
+    max-height: 100px;
+    border-bottom: 2px solid white;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* border: 1px solid red; */
+  }
+
+  .upper-header img {
+    max-width: 180px;
+    width: 100%;
+    height: auto;
+    /* max-height: 100px; */
+  }
+
+  .lower-header .nav .navbar .login_cart_burger {
+    max-width: 140px;
+    width: 100%;
+    position: absolute;
+    top: -60px;
+    right: 5%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger div button {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff;
+    font-size: 20px;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger div:first-child {
+    margin-right: 0;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .cart p {
+    display: none;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .burger {
+    display: block;
+  }
+
+  .lower-header .nav .navbar ul.menu-list {
+    display: none;
+  }
+
+  /* home-tabs */
+
+  .home-tabs {
+    margin-top: 113px;
+    position: relative;
+    min-height: 480px;
+    max-height: 480px;
+    height: 100%;
+    margin-bottom: 0;
+  }
+
+  .home-tabs img {
+    margin-top: 30px;
+    transform: scale(2.3);
+  }
+
+  .switchers {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+    left: 0;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    margin-right: 15%;
+    margin-left: 15%;
+    list-style: none;
+  }
+
+  /* phrase */
+
+  .phrase {
+    width: 100%;
+    height: 130px;
+    background-color: white;
+    text-align: center;
+    line-height: 130px;
+    margin-top: -170px;
+  }
+
+  /* footer */
+
+  .footer-content {
+    padding: 0 3%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-content .nav {
+    display: none;
+  }
+
+  .footer-content .footer-info {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-content .footer-info .logo_socials_copyright_offer-info .logo_socials-info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+
+  .footer-content .footer-info .logo_socials_copyright_offer-info .copyright_offer-info {
+    display: none;
+  }
+
+
+  .footer-content .footer-info .email_time_payments-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+
+
+  .footer-content .footer-info .email_time-info {
+    text-align: center;
+    margin-right: 0;
+  }
+
+  .footer-content .footer-info .email_time-info .email-info {
+    margin-bottom: 20px;
+  }
+
+  .footer-content .footer-info .payments-info {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .footer-content .inspiration {
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  /* category */
+
+  .category {
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.95);
+    margin-top: -25px;
+    padding-top: 25px;
+    padding-bottom: 70px;
+  }
+
+  /* product page */
+
+  .product-page {
+    margin-top: -25px;
+    background-color: rgb(215, 215, 215);
+    padding-top: 25px;
+    padding-bottom: 70px;
+  }
+
+  .product-section {
+    margin: 0 7%;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product-section .product-slider {
+    position: relative;
+    width: 100%;
+    text-align: center;
+  }
+
+  .product-section .product-slider .product-slider-center .product-slider-inner .product-slide {
+    max-width: 400px;
+    width: 100%;
+    max-height: 400px;
+    height: 100%;
+    margin: 0 auto;
+  }
+
+
+  .product-section .product-slider .product-slider-center .product-slider-arrow-left,
+  .product-section .product-slider .product-slider-center .product-slider-arrow-right {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 20px;
+  }
+
+  .product-section .product-slider .product-slider-bottom .product-switchers {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .product-section .product-info {
+    margin-top: 20px;
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-section .product-info .product-price {
+    box-sizing: border-box;
+    position: relative;
+    width: 130px;
+    height: 35px;
+    border-radius: 30px;
+    text-align: center;
+    padding-left: 0px;
+    line-height: 35px;
+    background: black;
+    color: rgb(215, 215, 215);
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .product-section .product-info hr {
+    margin-top: 20px;
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3)
+  }
+
+  .product-section .product-info .product-description {
+    white-space: pre-line;
+    margin-top: -20px;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(71, 68, 79);
+    line-height: 1.5;
+    font-style: italic;
+  }
+
+  .product-section .product-info .product-size {
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .product-section .product-info .product-size p {
+    font-size: 18px;
+  }
+
+  .product-section .product-info .product-size .product-size-btn {
+    margin: 5px;
+    width: 35px;
+    height: 35px;
+    border: none;
+    font-size: 14px;
+    color: rgb(215, 215, 215);
+    border-radius: 50px;
+    background-color: #fff;
+  }
+
+  .product-section .product-info .quantity_add {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-section .product-info .quantity_add .quantity {
+    margin-right: 0px;
+  }
+
+  .product-section .product-info .quantity_add .quantity p {
+    color: rgb(129, 131, 145);
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+  }
+
+  .product-section .product-info .quantity_add .add button {
+    width: 250px;
+    height: 35px;
+    border: none;
+    border-radius: 30px;
+    margin-top: 20px;
+    letter-spacing: 2px;
+    font-size: 15px;
+    font-weight: 300;
+    color: rgb(215, 215, 215);
+    background-color: black;
+  }
+
+  .product-page .recommended-section {
+    margin: 0 7%;
+    margin-top: 25px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product-page .recommended-section h1 {
+    text-transform: uppercase;
+    font-size: 15px;
+  }
+
+  .product-page .recommended-section .recommended-slider .recommended-slider-center {
+    /* border: 1px solid red; */
+    box-sizing: border-box;
+    max-width: 510px;
+    width: 100%;
+    height: 225px;
+  }
+
+  .product-page .recommended-section .recommended-slider .recommended-slider-center .recommended-slider-inner .recommended-slide {
+    /* border: 1px solid blue; */
+    box-sizing: border-box;
+    /* width: inherit; */
+    height: 220px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-page .recommended-section .recommended-slider .recommended-slider-arrow-left,
+  .product-page .recommended-section .recommended-slider .recommended-slider-arrow-right {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 20px;
+    margin-top: -50px;
+  }
+}
 
 @media (min-width : 768px) and (max-width : 1024px) {
   /* header */
@@ -1305,9 +1652,9 @@ input::-webkit-inner-spin-button {
     list-style: none;
   }
 
-   /* phrase */
+  /* phrase */
 
-   .phrase {
+  .phrase {
     width: 100%;
     height: 130px;
     background-color: white;
@@ -1426,6 +1773,4 @@ input::-webkit-inner-spin-button {
     flex-direction: column;
     align-items: center;
   }
-
 }
-
