width 1025-1300px css

--- a/public/css/modals/forgot-password-modal.css
+++ b/public/css/modals/forgot-password-modal.css
@@ -118,10 +118,16 @@
   }
 }
 
-
 @media (min-width : 768px) and (max-width : 1024px) {
   .modal-bg .forgot-modal {
     top: 65px;
+    right: 85px;
+  }
+}
+
+@media (min-width : 1025px) and (max-width : 1300px) {
+  .modal-bg .forgot-modal {
+    top: 190px;
     right: 85px;
   }
 }
