--- a/public/css/modals/cart-modal.css
+++ b/public/css/modals/cart-modal.css
@@ -327,3 +327,5 @@ input[type='checkbox']:checked ~ .cart-modal
 
 @media (min-width : 768px) and (max-width : 1024px) {
 }
+
+@media (min-width : 1025px) and (max-width : 1300px) {}
