--- a/public/css/modals/flash-message.css
+++ b/public/css/modals/flash-message.css
@@ -85,10 +85,14 @@
 
 @media (min-width : 481px) and (max-width : 767px) {}
 
-@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+@media (min-width : 321px) and (max-width : 480px) {
   .flash-message {
     left: 0;
     right: 0;
     margin: 0 auto;
   }
 }
+
+@media (min-width : 768px) and (max-width : 1024px) {}
+
+@media (min-width : 1025px) and (max-width : 1300px) {}
