--- a/public/css/modals/recommended-modal.css
+++ b/public/css/modals/recommended-modal.css
@@ -325,3 +325,5 @@ input::-webkit-inner-spin-button {
 @media (min-width : 768px) and (max-width : 1024px) {
 
 }
+
+@media (min-width : 1025px) and (max-width : 1300px) {}
