--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1774,3 +1774,152 @@ input::-webkit-inner-spin-button {
     align-items: center;
   }
 }
+
+@media (min-width : 1025px) and (max-width : 1300px) {
+  /* header */
+
+  .header {
+    /* border: 1px solid red; */
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    /* height: 100px; */
+  }
+
+  .upper-header {
+    /* border: 1px solid red; */
+    width: 100%;
+    max-height: 100px;
+    text-align: center;
+    border-bottom: 2px solid white;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .upper-header img {
+    width: 0 auto;
+    max-height: 100px;
+  }
+
+  .lower-header {
+    /* border: 1px solid blue; */
+    font-weight: 600;
+    font-size: 15px;
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .lower-header .nav .navbar {
+    /* border: 1px solid green; */
+    padding: 0 20px;
+    position: relative;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger {
+    /* border: 1px solid red; */
+    position: absolute;
+    top: 30px;
+    right: 3%;
+    display: flex;
+    align-items: center;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger div button {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff;
+    font-size: 15px;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger div:first-child {
+    margin-right: 15px;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .cart {
+    display: flex;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .cart p {
+    color: #fff;
+    padding-top: 1px;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .cart img {
+    width: 30px;
+    height: auto;
+  }
+
+  .lower-header .nav .navbar .login_cart_burger .burger {
+    display: none;
+  }
+
+
+  .lower-header .nav .navbar ul {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .lower-header .nav .navbar ul li {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+
+  .lower-header .nav .navbar ul li:after {
+    display: block;
+    content: '';
+    border-bottom: solid 1px white;
+    transform: scaleX(0);
+    transition: transform 600ms ease-in-out;
+  }
+
+  .lower-header .nav .navbar ul li:hover:after {
+    transform: scaleX(1);
+  }
+
+  .active {
+    border-bottom: solid 1px white;
+  }
+
+  .lower-header .nav .navbar ul li a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  /* product page */
+
+  .product-page .recommended-section {
+    margin: 0 7%;
+    margin-top: 25px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product-page .recommended-section h1 {
+    text-transform: uppercase;
+    font-size: 15px;
+  }
+
+  .product-page .recommended-section .recommended-slider .recommended-slider-center {
+    /* border: 1px solid red; */
+    box-sizing: border-box;
+    max-width: 680px;
+    width: 100%;
+    height: 225px;
+  }
+
+  .product-page .recommended-section .recommended-slider .recommended-slider-center .recommended-slider-inner .recommended-slide {
+    /* border: 1px solid blue; */
+    box-sizing: border-box;
+    /* width: inherit; */
+    height: 220px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
