--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -121,13 +121,13 @@
         <button type="submit" data-csrf="{{csrf}}">Войти <span>&#8640;</span></button>
       </div>
     </form>
-    <div class="login-through">
+    {{!-- <div class="login-through">
       <p>Войти через:</p>
       <div class="socials">
         <p><i class="fab fa-google"></i></p>
         <p><i class="fab fa-vk"></i></p>
       </div>
-    </div>
+    </div> --}}
     <div class="or">
       <hr>
       <p>или</p>
