--- a/views/category.hbs
+++ b/views/category.hbs
@@ -1,6 +1,6 @@
 <div class="category">
   {{#if category}}
-  <h1>{{category.title}}</h1>
+  <h1>{{category.rustitle}}</h1>
   <div class="product-list">
     {{#if products.length}}
     {{#each products}}
