--- a/views/admin-home.hbs
+++ b/views/admin-home.hbs
@@ -17,8 +17,8 @@
     <div class="second-plate">
       <p class="icon"><i class="material-icons">euro_symbol</i></p>
       <p class="plate-title">Выручка (мес.)</p>
-      <p class="plate-p">+179000</p>
-      <p class="plate-result">Увеличение на 10%</p>
+      <p class="plate-p">{{monthProfitSum.increase}}</p>
+      <p class="plate-result">Увеличение на {{monthProfitSum.percents}}%</p>
     </div>
     <div class="third-plate">
       <p class="icon"><i class="material-icons">group_add</i></p>
