--- a/views/admin-orders.hbs
+++ b/views/admin-orders.hbs
@@ -102,7 +102,7 @@
         </tr>
         {{/each}}
         {{else}}
-        <p>Здесь пока нет ни одного заказа.</p>
+        {{!-- <p>Здесь пока нет ни одного заказа.</p> --}}
         {{/if}}
       <tbody>
     </table>
