--- a/views/partials/admin-sidenav.hbs
+++ b/views/partials/admin-sidenav.hbs
@@ -6,7 +6,7 @@
       </div>
       <div class="admin-sidenav-info-profile-name">
         <p class="admin-profile-name">{{user.name}} {{user.surname}}</p>
-        <p class="admin-profile-position">Проект-менеджер</p>
+        <p class="admin-profile-position">Администратор</p>
       </div>
     </div>
     <div class="admin-sidenav-info-email">
