Resolved session problem

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -109,7 +109,7 @@
       </div>
       <div class="remember-forgot">
         <label class="remember">Запомнить
-          <input type="checkbox">
+          <input name="remember" type="checkbox" value="true">
           <span class="checkmark"></span>
         </label>
         <div class="forgot">
