--- a/public/css/modals/forgot-password-modal.css
+++ b/public/css/modals/forgot-password-modal.css
@@ -37,6 +37,8 @@
 }
 
 .modal-bg .forgot-modal .forgot-info input {
+  box-sizing: border-box;
+  padding: 0 10px;
   margin-top: 10px;
   border: none;
   background-color: #fff;
