--- a/public/css/modals/login-modal.css
+++ b/public/css/modals/login-modal.css
@@ -25,6 +25,8 @@
 }
 
 .modal-bg .login-modal .login-info input {
+  box-sizing: border-box;
+  padding: 0 10px;
   margin-top: 10px;
   border: none;
   background-color: #fff;
