--- a/public/css/pages/order-details.css
+++ b/public/css/pages/order-details.css
@@ -74,6 +74,8 @@
 }
 
 .order-details .order-section .delivery-info .delivery-info-list .input-field input {
+  box-sizing: border-box;
+  padding: 0 10px;
   margin-top: 5px;
   border: none;
   background-color: #fff;
