--- a/public/css/pages/password.css
+++ b/public/css/pages/password.css
@@ -51,6 +51,8 @@
 }
   
 .registration-modal .registration-info input {
+  box-sizing: border-box;
+  padding: 0 10px;
   margin-top: 10px;
   border: none;
   background-color: #fff;
