--- a/views/order-step1.hbs
+++ b/views/order-step1.hbs
@@ -45,7 +45,7 @@
           </div>
           <div class="input-field">
             <p class="p-input">Почтовый индекс</p>
-            <input name="zipcode" id="zipcode" type="text" value="{{user.zipcode}}" required>
+            <input name="zipcode" id="zipcode" type="number" value="{{user.zipcode}}" required>
           </div>
           <div class="continue-section">
             <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
