--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -178,13 +178,13 @@
         <button type="submit">Зарегистрироваться <span>&#8640;</span></button>
       </div>
     </form>
-    <div class="registration-through">
+    {{!-- <div class="registration-through">
       <p>Зарегистрироваться через:</p>
       <div class="socials">
         <p><i class="fab fa-google"></i></p>
         <p><i class="fab fa-vk"></i></p>
       </div>
-    </div>
+    </div> --}}
     <div class="or">
       <hr>
       <p>или</p>
